<resources>
    <string name="app_name">Eat Paper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_paper_detail">紙張詳情</string>
    <string name="outStock">出庫</string>
    <string name="inStock">入庫</string>
    <string name="weight">基重</string>
    <string name="size">尺寸</string>

    <string name="title_Add_paper">新增紙品</string>
    <string name="new_paper">新增紙品</string>
    <string name="checkpapercool">檢視紙庫</string>
    <string name="signOut">登出</string>
    <string-array name="PaperType">
        <item>封面紙</item>
        <item>色紙</item>
        <item>影印紙</item>
        <item>貼紙</item>
        <item>封面紙</item>
        <item>上光膜</item>
        <item>大圖捲紙</item>
    </string-array>
    <string-array name="PaperLabel">
        <item>商鉅</item>
        <item>松逸</item>
        <item>杏昌</item>
        <item>皓晟</item>
        <item>台中鑄字</item>
        <item>海宏杜</item>
        <item>奕郝</item>
        <item>益盛</item>
    </string-array>
    <string-array name="PaperUnit">
        <item>張</item>
        <item>包</item>
        <item>箱</item>
        <item>捲</item>
    </string-array>

    <string name="paper_name">Paper Name</string>
    <string name="paper_intro">ID , width*height , weight</string>
    <string name="num_of_paper">N</string>
    <string name="slice">張</string>
    <string name="paper_type_image">paper type image</string>
    <string name="title_activity_paper_list">PaperList</string>
    <string name="by">依</string>
    <string name="order">排序</string>
    <string name="filter">篩選</string>

    <string-array name="sorter_list">
        <item>紙名</item>
        <item>庫存量</item>
        <item>顏色</item>
        <item>紙品種類</item>
    </string-array>

    <string-array name="filter_list">
        <item>所有紙種</item>
        <item>封面紙</item>
        <item>色紙</item>
        <item>影印紙</item>
        <item>貼紙</item>
        <item>上光膜</item>
        <item>大圖捲紙</item>
    </string-array>
</resources>
