<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_paper_list_color"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="#E8EAF6"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/paper_introduction"
            app:layout_constraintEnd_toStartOf="@+id/paper_name"
            app:layout_constraintStart_toEndOf="@+id/paper_type_image"
            app:layout_constraintTop_toTopOf="@+id/paper_name"
            app:layout_constraintVertical_bias="0.0" />
        <ImageView
            android:id="@+id/paper_type_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/paper_type_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cover" />

        <TextView
            android:id="@+id/paper_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/paper_name"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/paper_introduction"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paper_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp"
            android:gravity="left"
            android:text="@string/paper_intro"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/paper_type_image"
            app:layout_constraintTop_toBottomOf="@+id/paper_name" />

        <TextView
            android:id="@+id/stock_of_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/num_of_paper"
            android:textColor="@android:color/tertiary_text_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/slice"
            android:textColor="@android:color/tertiary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stock_of_paper" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>