<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PaperDetailActivity">

    <View
        android:id="@+id/view_paper_detail_bottom"
        android:layout_width="413dp"
        android:layout_height="80dp"
        android:background="#E8EAF6"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_paper_detail_upper"
        android:layout_width="0dp"
        android:layout_height="215dp"
        android:background="#E8EAF6"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_idLabel_paper_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="32dp"
        android:text="商鉅 Q-302"
        android:textSize="18sp"
        android:elevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_nameLabel_paper_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:text="羊皮-金黃"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:elevation="6dp"
        app:layout_constraintStart_toStartOf="@+id/view_paper_detail_upper"
        app:layout_constraintTop_toBottomOf="@+id/textView_idLabel_paper_detail" />

    <TextView
        android:id="@+id/textView_currentQuantity_paper_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:includeFontPadding="false"
        android:text="589"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_paper_detail_upper"
        app:layout_constraintEnd_toStartOf="@+id/textView_unit_paper_detail"
        app:layout_constraintTop_toBottomOf="@+id/textView_nameLabel_paper_detail" />

    <TextView
        android:id="@+id/textView_unit_paper_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:text="張"
        android:textSize="24sp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_currentQuantity_paper_detail"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_size_paper_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="297X470"
        android:textSize="18sp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_paper_detail_upper"
        app:layout_constraintStart_toEndOf="@+id/textView_size_label_paper_detail"
        app:layout_constraintTop_toBottomOf="@+id/textView_weight_paper_detail" />

    <TextView
        android:id="@+id/textView_size_label_paper_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/size"
        android:textSize="18sp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_paper_detail_upper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_weight_paper_detail" />

    <TextView
        android:id="@+id/textView_weight_paper_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="70"
        android:textSize="18sp"
        android:elevation="6dp"
        app:layout_constraintStart_toEndOf="@+id/textView_weight_label_paper_detail"
        app:layout_constraintTop_toBottomOf="@+id/textView_nameLabel_paper_detail" />

    <TextView
        android:id="@+id/textView_weight_label_paper_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        android:textSize="18sp"
        android:elevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nameLabel_paper_detail" />

    <View
        android:id="@+id/view_color_upper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FBC02D"
        app:layout_constraintBottom_toTopOf="@+id/view_paper_detail_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_paper_detail_upper" />

    <Button
        android:id="@+id/button_inStock"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_add_circle"
        android:text="@string/inStock"
        android:textSize="20sp"
        android:elevation="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_paper_detail_bottom"
        app:layout_constraintStart_toStartOf="@+id/view_paper_detail_bottom" />

    <Button
        android:id="@+id/button_outStock"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_remove"
        android:text="@string/outStock"
        android:textSize="20sp"
        android:elevation="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_paper_detail_bottom"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/listView_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:background="#FDFDFD"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/view_paper_detail_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_paper_detail_upper" />

</android.support.constraint.ConstraintLayout>